market,chat,home,payment screens added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -117,6 +117,41 @@ flutter:
     - assets/profile-img/profile.png
     - assets/profile-img/appointment.png
     - assets/profile-img/side_arrow.png
+    - assets/home-img/header_side.png
+    - assets/home-img/medi_girl.png
+    - assets/home-img/right_leaf.png
+    - assets/home-img/location.png
+    - assets/home-img/search.png
+    - assets/home-img/reward.png
+    - assets/home-img/thairoid.png
+    - assets/home-img/diabetes.png
+    - assets/home-img/physico.png
+    - assets/home-img/consultants.png
+    - assets/home-img/market.png
+    - assets/home-img/recipes.png
+    - assets/home-img/banner.png
+    - assets/home-img/banner_leaf.png
+    - assets/home-img/medi.png
+    - assets/home-img/medi_bag.png
+    - assets/home-img/logo.png
+    - assets/home-img/lady-doc.png
+    - assets/home-img/medi_box.png
+    - assets/home-img/medi_st.png
+    - assets/home-img/doc1.png
+    - assets/home-img/doc2.png
+    - assets/home-img/doc3.png
+    - assets/home-img/female-model.png
+    - assets/home-img/indian-businessman.png
+    - assets/home-img/smiley-man.png
+    - assets/consultants-img/chat.png
+    - assets/consultants-img/back.png
+    - assets/consultants-img/notification.png
+    - assets/consultants-img/doc1.png
+    - assets/consultants-img/doc2.png
+    - assets/img/heart.png
+    - assets/screen-img/
+    - assets/market-img/
+
 
     
 
